--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=muchoko_dojo@gmail.com
+MAIL_FROM_NAME=muchoko
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
